@@ -3,7 +3,9 @@
 
 
 from notify import updater
+
 import sys
+import time
 import argparse
 import oauth2client
 
@@ -13,13 +15,8 @@ if __name__ == "__main__":
 
     ## required arguments
     opt.add_argument ("-c", "--config", dest="conf", help="Path to configuration file" , required=True)
-
-    opt.add_argument ("-i", "--batch-id", dest="batch_id", type=int, help="bulk load batch ID" )
-    
     opt.add_argument("-l", "--log", dest="logLevel", choices=['DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL', 'VERBOSE'], default='INFO', help="Set the logging level")
     opt.add_argument("-p", "--print", dest="show", default=False, action="store_true", help="Print configuration")
     
     up = updater.updater(opt)
     up.run()
-
-
