@@ -11,8 +11,8 @@
 user: venkateshk
 temp_path: /tmp
 home_path: /home/%(user)s
-load_path: /home/applhtb
-db_path: /apps/bl_automation/
+load_path: /apps/bl_automate
+db_path: /apps/bl_automate
 ;log_path: /var/log/%(user)s/%(user)s.log
 log_path: %(user)s.log
 
