@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* updates, factoring out common utils into helper and added get_status
 * tested phone verification and added get_status
 * tested ETS valiation, run request set
 * added ETS validate and run request set modules
